[gd_scene load_steps=6 format=3 uid="uid://dl256cbiml7w2"]

[ext_resource type="Script" uid="uid://tm0xmfsqpjmn" path="res://Scripts/Menu/carte_item.gd" id="1_ftkps"]
[ext_resource type="Resource" uid="uid://h8x1rnx07lek" path="res://Resources/Items/Resources/pepite_or.tres" id="2_ogjh7"]
[ext_resource type="Texture2D" uid="uid://dtu3l3evvy8ut" path="res://Assets/Sprites/UI/Carte_fond.png" id="3_wej4x"]
[ext_resource type="FontFile" uid="uid://dxgy4kvwea35l" path="res://UI/Themes/Fonts/FOT-RodinBokutoh Pro EB.otf" id="4_wej4x"]
[ext_resource type="Texture2D" uid="uid://cki2y17sbllgd" path="res://Assets/Sprites/UI/ligne.png" id="5_ogjh7"]

[node name="CarteItem" type="Control"]
layout_mode = 3
anchor_right = 0.039
anchor_bottom = 0.055
offset_right = -74.88
offset_bottom = -59.4
script = ExtResource("1_ftkps")
item = ExtResource("2_ogjh7")

[node name="Fond" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.999999
offset_top = -1.0
offset_right = 325.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wej4x")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="Fond"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Fond/MarginContainer"]
layout_mode = 2

[node name="LigneNomRank" type="HBoxContainer" parent="Fond/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Nom" type="Label" parent="Fond/MarginContainer/VBoxContainer/LigneNomRank"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_wej4x")
theme_override_font_sizes/font_size = 25

[node name="Spacer" type="Control" parent="Fond/MarginContainer/VBoxContainer/LigneNomRank"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Rank" type="Label" parent="Fond/MarginContainer/VBoxContainer/LigneNomRank"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("4_wej4x")
theme_override_font_sizes/font_size = 25

[node name="TextureRect" type="TextureRect" parent="Fond/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_ogjh7")

[node name="LigneIconDesc" type="HBoxContainer" parent="Fond/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="Fond/MarginContainer/VBoxContainer/LigneIconDesc"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 0
stretch_mode = 5

[node name="Spacer" type="Control" parent="Fond/MarginContainer/VBoxContainer/LigneIconDesc"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="Fond/MarginContainer/VBoxContainer/LigneIconDesc"]
custom_minimum_size = Vector2(160, 20)
layout_mode = 2
size_flags_horizontal = 2
theme_override_fonts/normal_font = ExtResource("4_wej4x")
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
fit_content = true
scroll_following = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2(35, 39)
